# ProgonPy

./: .gitignore  ProgonPy.spec  README.md  main.py  pyproject.toml  test.py
backend/: backend_client.py
build_tools/: build_exe.py
gui/: app.py
gui/state/: poller.py
gui/widgets/: RegisterMapWidget.py  log_widget.py  modbus_stand_widget.py  modbus_widget_read.py  transport_widget.py
src/progonpy/app/: main.py  service.py
src/progonpy/domain/: models.py  protocols.py
src/progonpy/infra/: modbus_rtu.py  settings.py
src/progonpy/services/: device_test.py  discovery.py  tests.py
src/progonpy/ui/: main_window.py  test_panel.py
src/progonpy/workers/: tasks.py
