[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "progonpy"
version = "0.1.0"
description = "Modular Modbus device test bench with desktop UI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pyserial>=3.5",
  "PySide2>=5.15.2"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
progonpy = "progonpy.app.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
